--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://drive.google.com/file/d/1U-HoFX51me3bfEkehghHaIB56TEoExav/view" class="logo">My Resume</a>
+						<a href="https://drive.google.com/file/d/1U-HoFX51me3bfEkehghHaIB56TEoExav/view" target="_blank" class="logo">My Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -40,10 +40,10 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="https://medium.com/@gowthamsr37" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
-							<li><a href="https://www.linkedin.com/in/gowtham-s-r-78120a127/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://medium.com/@gowthamsr37" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+							<li><a href="https://www.linkedin.com/in/gowtham-s-r-78120a127/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			
-							<li><a href="https://github.com/gowthamsr37" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/gowthamsr37" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -73,7 +73,7 @@
 									<a href="#" class="image fit"><img src="images/movie_project.jpg" alt="" /></a>
 									<p>Content Based Recommendation System</p>
 									<ul class="actions special">
-										<li><a href="https://movie-recmndation-gowtham.herokuapp.com/" class="button">Live Demo</a></li>
+										<li><a href="https://movie-recmndation-gowtham.herokuapp.com/" target="_blank" class="button">Live Demo</a></li>
 									</ul>
 								</article>
 								<article>
@@ -85,7 +85,7 @@
 									<a href="#" class="image fit"><img src="images/house_project.jpg" alt="" /></a>
 									<p>Regression Problem to predict the house price</p>
 									<ul class="actions special">
-										<li><a href="https://house-price-prediction-gowtham.herokuapp.com/" class="button">Live Demo</a></li>
+										<li><a href="https://house-price-prediction-gowtham.herokuapp.com/" target="_blank" class="button">Live Demo</a></li>
 									</ul>
 								</article>
 								<article>
@@ -97,7 +97,7 @@
 									<a href="#" class="image fit"><img src="images/spam_project.jpg" alt="" /></a>
 									<p>Spam Message classifier which will classify the given mail as spma or not spam</p>
 									<ul class="actions special">
-										<li><a href="https://spam-detector-gowtham.herokuapp.com/" class="button">Live Demo</a></li>
+										<li><a href="https://spam-detector-gowtham.herokuapp.com/" target="_blank" class="button">Live Demo</a></li>
 									</ul>
 								</article>
 								<article>
@@ -109,7 +109,7 @@
 									<a href="#" class="image fit"><img src="images/books_project.jpg" alt="" /></a>
 									<p>Collaborative and Popularity based book recommendation system</p>
 									<ul class="actions special">
-										<li><a href=" https://book-recommendation-gowtham.herokuapp.com/" class="button">Live Demo</a></li>
+										<li><a href=" https://book-recommendation-gowtham.herokuapp.com/" target="_blank" class="button">Live Demo</a></li>
 									</ul>
 								</article>
 								<article>
@@ -121,7 +121,7 @@
 									<a href="#" class="image fit"><img src="images/car_price_prediction_project.jpg" alt="" /></a>
 									<p>Regression based car price prediction application</p>
 									<ul class="actions special">
-										<li><a href="https://car-price-predictor-gowtham.herokuapp.com/" class="button">Live Demo</a></li>
+										<li><a href="https://car-price-predictor-gowtham.herokuapp.com/" target="_blank" class="button">Live Demo</a></li>
 									</ul>
 								</article>
 								<article>
@@ -133,7 +133,7 @@
 									<a href="#" class="image fit"><img src="images/ipl_project_2.jpg" alt="" /></a>
 									<p>IPL data analytics project</p>
 									<ul class="actions special">
-										<li><a href=" https://ipl-data-analytics-gowtham.herokuapp.com/" class="button">Live Demo</a></li>
+										<li><a href=" https://ipl-data-analytics-gowtham.herokuapp.com/" target="_blank" class="button">Live Demo</a></li>
 									</ul>
 								</article>
 							</section>
