--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">My Projects</a></li>
 							<li><a href="generic.html">My Blogs</a></li>
+							<li><a href="elements.html">Industry Project 1</a></li>
 							
 						</ul>
 						<ul class="icons">
@@ -152,19 +153,7 @@
 							</section>
 
 						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
+							
 
 					</div>
 
