--- a/generic.html
+++ b/generic.html
@@ -27,6 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">My Projects</a></li>
 							<li class="active"><a href="generic.html">My Blogs</a></li>
+							<li><a href="elements.html">Industry Project 1</a></li>
 							
 						</ul>
 						<ul class="icons">
@@ -201,20 +202,7 @@
 						</section>
 
 					<!-- Footer -->
-						<footer>
-							<div class="pagination">
-								<!--<a href="#" class="previous">Prev</a>-->
-								<a href="#" class="page active">1</a>
-								<a href="#" class="page">2</a>
-								<a href="#" class="page">3</a>
-								<span class="extra">&hellip;</span>
-								<a href="#" class="page">8</a>
-								<a href="#" class="page">9</a>
-								<a href="#" class="page">10</a>
-								<a href="#" class="next">Next</a>
-							</div>
-						</footer>
-
+						
 				</div>
 
 			<!-- Footer -->
