--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Gowtham S R</title>
@@ -22,7 +18,7 @@
 						<h1>Gowtham S R
 						</h1>
 						<p>Data Scientist and Machine Learning Engineer</p>
-						<p>You can find some of the end to end machine learning projects and blogs related to data science domain</p>
+						<p>You can find some of my end to end machine learning personal projects and blogs related to data science domain and details about my industry projects</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -38,7 +34,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">My Projects</a></li>
 							<li><a href="generic.html">My Blogs</a></li>
-							<li><a href="elements.html">Industry Project 1</a></li>
+							<li><a href="elements.html">Industry Project</a></li>
 							
 						</ul>
 						<ul class="icons">
