--- a/elements.html
+++ b/elements.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://drive.google.com/file/d/1U-HoFX51me3bfEkehghHaIB56TEoExav/view" target="_blank" class="logo">My Resume</a>
+						<a href="https://drive.google.com/file/d/1zAw1WYqcyVMM6KD4ky3izLYKRJOo1tmT/view?usp=share_link" target="_blank" class="logo">My Resume</a>
 					</header>
 
 				<!-- Nav -->
